addign docker information